--- a/TrabalhoBanco/WebContent/Endereco.xhtml
+++ b/TrabalhoBanco/WebContent/Endereco.xhtml
@@ -59,19 +59,12 @@
 	<h:form acceptcharset="ISO-8859-1">
 	<fieldset>
 			<h:outputText value="• Endereço: "/> 
-			<br/> 
-			<h:selectOneMenu value="#{mEnderecoBean.idCad}">
-			<f:selectItem itemLabel=" -- Selecione -- " itemValue="0">
-			</f:selectItem>
-			<f:selectItems value="#{mCadastroBean.cadastro}" var="cadastro" itemLabel="#{cadastro.nome}"  itemValue="#{cadastro.id}">
-			</f:selectItems>
-			</h:selectOneMenu>
-			→<p:inputText id="Rua" required="true" pt:placeholder="Rua"><f:validateLength minimun="10" maximum="100" value="#{mEnderecoBean.endereco.rua}"/></p:inputText>
-			<br/> →<p:inputText  required="true" pt:placeholder="Número" value="#{mEnderecoBean.endereco.numero}"></p:inputText>
-			<br/> →<p:inputText  required="true" pt:placeholder="Bairro" ></p:inputText>
-			<br/> →<p:inputText  required="true" pt:placeholder="Cidade" ></p:inputText>
-			<br/> →<p:inputText  required="true" pt:placeholder="Estado" ></p:inputText>
-			<br/> →<p:inputText  required="true" pt:placeholder="País" ></p:inputText>
+			<br/> →<p:inputText id="Rua" required="true" pt:placeholder="Rua" value="#{mEnderecoBean.endereco.rua}"><f:validateLength minimun="10" maximum="100"/></p:inputText>
+			<br/> →<p:inputText id="Num" required="true"required="true" pt:placeholder="Número" value="#{mEnderecoBean.endereco.numero}"></p:inputText>
+			<br/> →<p:inputText id="Bairro" required="true" required="true" pt:placeholder="Bairro" value="#{mEnderecoBean.endereco.bairro}"></p:inputText>
+			<br/> →<p:inputText id="Cidade" required="true" required="true" pt:placeholder="Cidade" value="#{mEnderecoBean.endereco.cidade}"></p:inputText>
+			<br/> →<p:inputText id="Estado" required="true" required="true" pt:placeholder="Estado" value="#{mEnderecoBean.endereco.estado}"></p:inputText>
+			<br/> →<p:inputText id="Pais" required="true" required="true" pt:placeholder="País" value="#{mEnderecoBean.endereco.pais}"></p:inputText>
 			<br/> 
 			<br/> 
 			<h:commandButton value="Próximo Passo" action="#{mEnderecoBean.gravarEndereco(mEnderecoBean.endereco)}"></h:commandButton>
