--- a/TrabalhoBanco/WebContent/CadastroCliente.xhtml
+++ b/TrabalhoBanco/WebContent/CadastroCliente.xhtml
@@ -90,7 +90,7 @@
 				<f:validateLength minimun="15" maximum="20" />
 			</p:inputText>
 			<br/> 
-			<br/> 
+			<br/> asas
 			<h:outputText value="• Pessoa: "/>
 			<p:selectOneRadio value="Pessoa" required="true">
 				<f:selectItem itemValue="Jur" itemLabel="Juridica" />
