--- a/TrabalhoBanco/WebContent/Login.xhtml
+++ b/TrabalhoBanco/WebContent/Login.xhtml
@@ -60,7 +60,10 @@
 		• Senha:<p:inputText id="Senha" pt:placeholder="Digite a senha"></p:inputText>
 		<br/>
 		<br/>
+	<p:commandButton value="Login" action="#"></p:commandButton>
+	</h:form>
 		Ou
+	<h:form>
 		<br/>
 		<br/>
 		• Agência: <p:inputText id="Agencia" pt:placeholder="Digite a agência"></p:inputText>
