--- a/TrabalhoBanco/WebContent/CadastroCliente.xhtml
+++ b/TrabalhoBanco/WebContent/CadastroCliente.xhtml
@@ -75,8 +75,8 @@
 			<p:inputText id="telefone" required="true" pt:placeholder="Digite o telefone" value="#{mCadastroBean.cadastro.telefone}"></p:inputText>
 			<br/> 
 			<br/>
-			<h:outputText value="• Data: "/>
-			<p:inputText id="datanasc" pt:placeholder="Data de nascimento" value="#{mCadastroBean.cadastro.dataNasc}"></p:inputText>
+			<h:outputText value="• Data de Nascimento: "/>
+			<p:inputText id="datanasc" required="true" pt:placeholder="Data de nascimento" value="#{mCadastroBean.cadastro.dataNasc}"></p:inputText>
 			<br/> 
 			<br/> 
 			<h:outputText value="• Sexo: "/>
@@ -91,12 +91,8 @@
 			</p:inputText>
 			<br/> 
 			<br/>
-			<h:outputText value="• Pessoa: "/>
-			<p:selectOneRadio value="Pessoa" required="true">
-				<f:selectItem itemValue="Jur" itemLabel="Juridica" />
-				<f:selectItem itemValue="Fis" itemLabel="Fisica" />
-			</p:selectOneRadio>
-			<h:commandButton value="Próximo Passo" action="#{mCadastroBean.addCad(mCadastroBean.cadastro)}"></h:commandButton>
+			<h:inputHidden value="#{mCadastroBean.cadastro.idCad}"></h:inputHidden>
+			<h:commandButton value="Próximo Passo" action="#{mCadastroBean.addCad(mCadastroBean.cadastro)}"><f:param name="idCad" value="#{param['idCad']}"></f:param></h:commandButton>
 		</fieldset>
 	</h:form>
 </h:body>
