--- a/TrabalhoBanco/WebContent/AreaCliente.xhtml
+++ b/TrabalhoBanco/WebContent/AreaCliente.xhtml
@@ -64,25 +64,25 @@
 			<br/>
 			
 			<ul>
-		<li><a href="">Saldo</a></li>
+		<li><a href="Saldo.xhtml">Saldo</a></li>
 			<br/>
 								
-		<li><a href="">Transderencia</a></li>
+		<li><a href="Transferencia.xhtml">Transderencia</a></li>
 			<br/>
 		
-		<li><a href="">deposito</a></li>
+		<li><a href="Deposito.xhtml">deposito</a></li>
 			<br/>
 		
-		<li><a href="">pagamentos</a></li>
+		<li><a href="Pagamento.">pagamentos</a></li>
 			<br/>
 			
-		<li><a href="">Emprestimo</a></li>
+		<li><a href="Emprestimo.xhtml">Emprestimo</a></li>
 			<br/>
 			
-		<li><a href="">Poupança</a></li>
+		<li><a href="Poupanca.xhtml">Poupança</a></li>
 			<br/>
 			
-		<li><a href="">Comprovantes</a></li>
+		<li><a href="Comprovante.xhtml">Comprovantes</a></li>
 			<br/>
 			</ul>
 
