--- a/TrabalhoBanco/WebContent/AreaCliente.xhtml
+++ b/TrabalhoBanco/WebContent/AreaCliente.xhtml
@@ -62,18 +62,18 @@
 		
 			<h1>Ir para</h1>
 			<br/>
-			
+			    
 			<ul>
 		<li><a href="Saldo.xhtml">Saldo</a></li>
 			<br/>
 								
-		<li><a href="Transferencia.xhtml">Transderencia</a></li>
+		<li><a href="Transferencia.xhtml">Transferencia</a></li>
 			<br/>
 		
 		<li><a href="Deposito.xhtml">deposito</a></li>
 			<br/>
 		
-		<li><a href="Pagamento.">pagamentos</a></li>
+		<li><a href="Pagamento.xhtml">pagamentos</a></li>
 			<br/>
 			
 		<li><a href="Emprestimo.xhtml">Emprestimo</a></li>
