--- a/TrabalhoBanco/WebContent/Endereco.xhtml
+++ b/TrabalhoBanco/WebContent/Endereco.xhtml
@@ -59,6 +59,16 @@
 	<h:form acceptcharset="ISO-8859-1">
 	<fieldset>
 		<h1>Cadastrar Endereço</h1>
+		<h:selectOneMenu value="#{mEnderecoBean.idCad}">
+			<f:selectItem itemLabel=" -- Selecione -- " itemValue="0">
+			</f:selectItem>
+			<f:selectItems value="#{mCadastroBean.cadastros}"
+				var="cadastro" itemLabel="#{cadastro.nome}" 
+				itemValue="#{cadastro.idCad}">
+			</f:selectItems>
+		</h:selectOneMenu>
+		<br/>
+		<br/>
 			<h:outputText value="• Endereço: "/> 
 			<br/> →<p:inputText id="Rua" required="true" pt:placeholder="Rua" value="#{mEnderecoBean.endereco.rua}"><f:validateLength minimun="10" maximum="100"/></p:inputText>
 			<br/> →<p:inputText id="Num" required="true" pt:placeholder="Número" value="#{mEnderecoBean.endereco.numero}"></p:inputText>
