--- a/TrabalhoBanco/WebContent/Administrador.xhtml
+++ b/TrabalhoBanco/WebContent/Administrador.xhtml
@@ -60,7 +60,7 @@
 			<h1>• Ir para</h1>
 			<br/>   
 			<ul>
-		<li><a href="#">Cadastrar Agência</a></li>
+		<li><a href="Agencia.xhtml">Cadastrar Agência</a></li>
 			<br/>					
 		<li><a href="#">Buscar Clientes</a></li>
 			<br/>
