--- a/TrabalhoBanco/WebContent/Agencia.xhtml
+++ b/TrabalhoBanco/WebContent/Agencia.xhtml
@@ -69,7 +69,7 @@
 			<p:inputText id="conta" pt:placeholder="Digite a conta" value="#{mAgenciaBean.agencia.conta}"></p:inputText>
 			<br/>
 			<br/> 
-			<h:commandButton value="Gravar" action="#{mAgenciaBean.gravarAgencia(mAgenciaBean.agencia)}"></h:commandButton>
+			<p:commandButton value="Gravar" action="#{mAgenciaBean.gravarAgencia(mAgenciaBean.agencia)}"></p:commandButton>
 </h:form>
 </body>
 </html>
