--- a/TrabalhoBanco/WebContent/Login.xhtml
+++ b/TrabalhoBanco/WebContent/Login.xhtml
@@ -55,24 +55,40 @@
 	<h:form>
 	<h1>Login</h1>
 		<p:messages id="messages" />
-		<p:outputLabel for="Email" value="Email:" />
-		• Email: <p:inputText id="Email" value="#{mCadastroBean.cadastro.email}" pt:placeholder="Digite o e-mail"></p:inputText>
+		<p:outputLabel for="Email" value="• Email:" />
+		<p:inputText id="Email" value="#{mCadastroBean.cadastro.email}" pt:placeholder="Digite o e-mail"></p:inputText>
 		<br/>
 		<br/>
-		<p:outputLabel for="Senha" value="Senha:" />
-		• Senha:<p:inputText id="Senha" value="#{mCadastroBean.cadastro.senha}" pt:placeholder="Digite a senha"></p:inputText>
+		<p:outputLabel for="Senha" value="• Senha:" />
+		<p:password id="Senha" value="#{mCadastroBean.cadastro.senha}" pt:placeholder="Digite a senha"></p:password>
 		<br/>
 		<br/>
+		<b:icon name="glyphicon-log-in"></b:icon>
 	<p:commandButton value="Login" action="#{mCadastroBean.enviar}" ajax="false"></p:commandButton>
 	</h:form>
-		Ou
+	<br/>
+		Ou login por Agência e Conta
 	<h:form>
+		<p:messages id="messages2" />
+		<p:outputLabel for="Agencia" value="• Agência:"/>
+		<p:inputText id="Agencia" pt:placeholder="Digite a agência"></p:inputText>
 		<br/>
 		<br/>
-		• Agência: <p:inputText id="Agencia" pt:placeholder="Digite a agência"></p:inputText>
+		<p:outputLabel for="Conta" value="• Conta:"/>
+		<p:inputText id="Conta" pt:placeholder="Digite a conta"></p:inputText>
 		<br/>
 		<br/>
-		• Conta:<p:inputText id="Conta" pt:placeholder="Digite a conta"></p:inputText>
+		<p:commandButton value="Login" action="#"></p:commandButton>
+	</h:form>
+	<br/>
+	Ou login por Administrador
+		<h:form>
+		<p:messages id="messages3" />
+		<p:outputLabel for="Email" value="• Email:" />
+		• Email: <p:inputText id="Email" pt:placeholder="Digite o email"></p:inputText>
+		<br/>
+		<br/>
+		• Senha:<p:inputText id="Senha" pt:placeholder="Digite a senha"></p:inputText>
 		<br/>
 		<br/>
 		<p:commandButton value="Login" action="#"></p:commandButton>
