--- a/TrabalhoBanco/WebContent/Administrador.xhtml
+++ b/TrabalhoBanco/WebContent/Administrador.xhtml
@@ -87,6 +87,10 @@
 		<p:submenu label="Cadastrar">
 		<p:menuitem value="Agências" url="Agencia.xhtml"></p:menuitem>
 		</p:submenu>
+		<p:submenu label="Inserir Dados">
+		<p:menuitem value="Saldo" url="#"></p:menuitem>
+		<p:menuitem value="Conta" url="#"></p:menuitem>
+		</p:submenu>
 	</p:menubar>
 	</nav>	
 	</ui:define>
