--- a/TrabalhoBanco/WebContent/AreaCliente.xhtml
+++ b/TrabalhoBanco/WebContent/AreaCliente.xhtml
@@ -74,7 +74,8 @@
 			<br/>			
 		<li><a href="Comprovante.xhtml">Comprovantes</a></li>
 			<br/>
-			</ul>						
+			</ul>	
+			<p:commandButton value="Logout" action="#{mCadastroBean.logout}"></p:commandButton>					
 		</h:form>
 	</h:body>
 </html>
